--- a/custom_components/goecharger/manifest.json
+++ b/custom_components/goecharger/manifest.json
@@ -10,7 +10,7 @@
   "iot_class": "local_polling",
   "issue_tracker": "https://github.com/cathiele/homeassistant-goecharger/issues",
   "requirements": [
-    "goecharger==0.1.0"
+    "goecharger git+https://github.com/mpw96/goecharger.git@0.1.1"
   ],
-  "version": "0.26.3"
+  "version": "0.26.4"
 }
