--- a/custom_components/goecharger/manifest.json
+++ b/custom_components/goecharger/manifest.json
@@ -12,5 +12,5 @@
   "requirements": [
     "git+https://github.com/mpw96/goecharger.git@0.1.1"
   ],
-  "version": "0.27.3"
+  "version": "0.26.4-0.27.3-0.1"
 }
