updated links to git repos
It took me a while to figure out that I was not using the original repo from cathiele instead the fork from mpw96.

Now that I have my own fork from mpw96 I will know in the future.

--- a/custom_components/goecharger/manifest.json
+++ b/custom_components/goecharger/manifest.json
@@ -2,13 +2,15 @@
   "domain": "goecharger",
   "name": "go-eCharger",
   "codeowners": [
-    "@cathiele"
+    "@cathiele",
+    "@mpw96",
+    "@DanielSzoska"
   ],
   "config_flow": true,
   "dependencies": [],
-  "documentation": "https://github.com/cathiele/homeassistant-goecharger",
+  "documentation": "https://github.com/DanielSzoska/homeassistant-goecharger",
   "iot_class": "local_polling",
-  "issue_tracker": "https://github.com/cathiele/homeassistant-goecharger/issues",
+  "issue_tracker": "https://github.com/DanielSzoska/homeassistant-goecharger/issues",
   "requirements": [
     "git+https://github.com/mpw96/goecharger.git@0.1.1"
   ],
